# libbloom-wrapper

./: .gitignore  BitUtil.h  BloomFilter.h  CMakeLists.txt  Makefile  README.md  bitmap.h  bloom.c  bloom.h  example.cpp  pybf.cpp  pybf.py  setup.py  test_pybf.py
benchmark/: 32u.md  README.md  benchmark_libbloom_org.cpp  benchmarks.cpp  plots.py  random.h  timing.h
benchmark/raw_results/: benchmark_results_32u.csv  benchmark_results_64u.csv
example/: example.cc  test.py  wrapper_example.cc
libbloom_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
misc/test/: perf.c  test.c
tests/: BloomFilterTest.cpp
wyhash/: wyhash.h
